[package]
name = "kantera"
description = "Video composition and rendering kit"
version = "0.0.1"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
edition = "2018"
repository = "https://github.com/carrotflakes/kantera"
keywords = []
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
cairo-rs = "0.7"
lazy_static = "1.4"
regex = "1"
rusttype = "0.8"
image = "0.22"
rustfft = "3.0"
gluten = { path = "../gluten", version = "*" }
