[package]
name = "kantera"
description = "Video composition and rendering kit"
version = "0.0.1"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
edition = "2021"
repository = "https://github.com/carrotflakes/kantera"
keywords = []
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ffmpeg", "cairo"]

ffmpeg = []
cairo = ["cairo-rs"]

[dependencies]
num-traits = "0.2"
cairo-rs = { version = "0.18", optional = true }
lazy_static = "1.4"
regex = "1.5"
rusttype = "0.8"
image = "0.24"
rustfft = "3.0"
gluten = { git = "https://github.com/carrotflakes/gluten.git", branch = "kantera", version = "*" }
